Segmentation fault, when script active and render animation with motion blur #38332

Closed
opened 2014-01-23 14:42:43 +01:00 by Sebastian Röthlisberger · 13 comments

System Information
osx 10.9.1, mbpr 13.1, 16gb Ram

Blender Version
Broken: own 2.69.10 a81cf31 and buildbot e07e8e3
Worked: official 2.69
Short description of error
Blender crash on random frame while rendering animation. Sometimes it crashes after 30 frames sometimes after 1. It appears only to happen if Motion Blur is enabled.

Traceback (most recent call last):
  File "/Text", line 9, in update_test
  File "/Text", line 37, in focus_test
AttributeError: Writing to ID classes in this context is not allowed: Camera, Camera datablock, error setting Camera.lens
Segmentation fault: 11

Exact steps for others to reproduce the error
Open crash.blend
Run the Script
Hit Render Animation

CrashII.blend

**System Information** osx 10.9.1, mbpr 13.1, 16gb Ram **Blender Version** Broken: own 2.69.10 a81cf31 and buildbot e07e8e3 Worked: official 2.69 **Short description of error** Blender crash on random frame while rendering animation. Sometimes it crashes after 30 frames sometimes after 1. It appears only to happen if Motion Blur is enabled. ``` Traceback (most recent call last): File "/Text", line 9, in update_test File "/Text", line 37, in focus_test AttributeError: Writing to ID classes in this context is not allowed: Camera, Camera datablock, error setting Camera.lens Segmentation fault: 11 ``` **Exact steps for others to reproduce the error** Open crash.blend Run the Script Hit Render Animation [CrashII.blend](https://archive.blender.org/developer/F73928/CrashII.blend)

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @SebastianRothlisberger

Added subscriber: @SebastianRothlisberger

The Auto Tile Size Addon suffers the same issue - if you animate the render tile size it crashes blender eventually:

Traceback (most recent call last):
  File "/Users/bashi/Library/Application Support/Blender/2.69/scripts/addons/auto_tile_size_release_02.py", line 65, in on_scene_update
    scene.TileSizePrevDevice = device
AttributeError: Writing to ID classes in this context is not allowed: Scene, Scene datablock, error setting Scene.TileSizePrevDevice
trigger device changed
Traceback (most recent call last):
  File "/Users/bashi/Library/Application Support/Blender/2.69/scripts/addons/auto_tile_size_release_02.py", line 65, in on_scene_update
    scene.TileSizePrevDevice = device
AttributeError: Writing to ID classes in this context is not allowed: Scene, Scene datablock, error setting Scene.TileSizePrevDevice
Segmentation fault: 11
The Auto Tile Size Addon suffers the same issue - if you animate the render tile size it crashes blender eventually: ``` Traceback (most recent call last): File "/Users/bashi/Library/Application Support/Blender/2.69/scripts/addons/auto_tile_size_release_02.py", line 65, in on_scene_update scene.TileSizePrevDevice = device AttributeError: Writing to ID classes in this context is not allowed: Scene, Scene datablock, error setting Scene.TileSizePrevDevice trigger device changed Traceback (most recent call last): File "/Users/bashi/Library/Application Support/Blender/2.69/scripts/addons/auto_tile_size_release_02.py", line 65, in on_scene_update scene.TileSizePrevDevice = device AttributeError: Writing to ID classes in this context is not allowed: Scene, Scene datablock, error setting Scene.TileSizePrevDevice Segmentation fault: 11 ```

Added subscriber: @Sergey

Added subscriber: @Sergey

Added subscriber: @EricLafarge

Added subscriber: @EricLafarge

Added subscriber: @AlekseyBabahin

Added subscriber: @AlekseyBabahin

You have a classical race condition - update() called from UI thread, update_test() called from render animation thread on the same time.
Write access to bpy.context.scene.camera.data.lens (or any other property in general) be in need of properly locking.

But I have no idea how to implement it correctly.

You have a classical race condition - update() called from UI thread, update_test() called from render animation thread on the same time. Write access to bpy.context.scene.camera.data.lens (or any other property in general) be in need of properly locking. But I have no idea how to implement it correctly.

This issue was referenced by blender/blender-addons-contrib@f462e8a9c8

This issue was referenced by blender/blender-addons-contrib@f462e8a9c826a308a454f13bb867083e866b9877

This issue was referenced by f462e8a9c8

This issue was referenced by f462e8a9c826a308a454f13bb867083e866b9877

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f462e8a9c8.

Closed by commit f462e8a9c8.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38332
No description provided.