Fix T38332, Fix T38607: cycles render crash with motion blur.

It wasn't working together well with the python thread state changes after the
depsgraph multithreading.